# Fucking

./: .gitignore  Agent学习路线与项目规划.md  DEPLOYMENT.md  README.md
Agents/: 技能知识详解.md
CF-DaoHub_v3.0_universal/: CLOUD_AGENT_GUIDE.md  README.md  agent_dao.py  cf_cloud_agent.py  deploy.ps1
Gaokao/: 广东美术与设计类志愿参考_2026.md
Graph/: REPRODUCE.md  RUN.md  environment.yml  main.py  requirements.txt  中文.md  毕业要求.txt  英文_改_Method定稿.md
Hello/: DEPLOYMENT.md  requirements.txt  重写指南-文件顺序与复现.md
Hello-Agents/: README.md  conftest.py  第七章框架结构导读.md  第七章框架重写指南.md
Patent_Choose/: README.md  agent-service.md  milvus.json  patent_intent_5000_diverse.json  patent_intent_train_v2.json  requirements.txt  test_remote_model.py  基于大模型与意图识别的 Agent 交互式需求解析模块概要设计.docx  意图识别Agent_阶段汇报.md  意图识别请求参数.md  意图识别输出参数.md  请求参数.md
english-tutoring/: 01-音标系统精讲.md  02-语法总框架.md  03-核心词汇分类速记.md  04-配套阅读文章.md  05-情景对话与句型操练.md  06-练习题与答案详解.md  07-学习计划与教学法.md  README.md
mini-swe-agent-demo/: README.md  (+3 more)
swe-agent-scratch/: README.md  config.example.yaml  pyproject.toml
swe-agent-scratch/src/sweagent0/: __init__.py  cli.py  config.py  llm.py
swe-agent-scratch/src/sweagent0/agent/: __init__.py  loop.py  parser.py  prompts.py  trajectory.py
swe-agent-scratch/src/sweagent0/eval/: swebench.py
swe-agent-scratch/src/sweagent0/repomap/: __init__.py  repo_map.py
swe-agent-scratch/src/sweagent0/tools/: __init__.py  base.py  bash.py  editor.py  git_ops.py  search.py  submit.py  tester.py
swe-agent-scratch/tests/: test_agent_loop.py  test_parser.py  test_repomap.py  test_tools.py  test_trajectory.py
(+132 files in other folders)
